# CLBDEMO

./: CMakeLists.txt  arm-cross-compile.cmake  install.sh  readme.md
00_hello_world/: 00_hello_world.c  a.out
01_rgb_led/: 01_rgb_led.c  a.out
02_relay/: 02_relay.c  a.out
03_laser/: 03_laser.c  a.out
04_tilt_switch/: 04_tilt_switch.c
05_active_buzzer/: 05_active_buzzer.c
06_passive_buzzer/: 06_passive_buzzer.c
07_reed_switch/: 07_reed_switch.c
08_photo_interrupter/: 08_photo_interrupter.c
09_pcf8591/: 09_pcf8591.c
10_rain_detector/: 10_rain_detector.c
11_joystick_ps2/: 11_joystick_ps2.c
12_potentiomater/: 12_potentiomater.c
13_analog_hall/: 13_analog_hall.c
14_thermistor/: 14_thermistor.c
15_sound_sensor/: 15_sound_sensor.c
16_photo_resistor/: 16_photo_resistor.c
17_flame_sensor/: 17_flame_sensor.c
18_gas_sensor/: 18_gas_sensor.c
19_ircontrol/: 19_ircontrol.c
20_touch_switch/: 20_touch_switch.c
21_utrasonic_ranging/: 21_utrasonic_ranging.c
22_rotary_encoder/: 22_rotary_encoder.c
23_humiture/: 23_humiture.c
24_ir_obstacle/: 24_ir_obstacle.c
25_i2c_lcd1602/: 25_i2c_lcd1602.c
26_barometer/: 26_barometer.c  bmp180.c  bmp180.h
27_mpu6050/: 27_mpu6050.c
28_rtc_ds1302/: 28_rtc_ds1302.c
