include(./arm-cross-compile.cmake)
project(RASPBERRYDEMO)
cmake_minimum_required(VERSION 3.10)
set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/bin)

function(ListDirectory RESULT_TARGET RELATIVE_PATH)
    file(GLOB MODULES_PATH RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${RELATIVE_PATH})
    if(MODULES_PATH)
        STRING(REGEX REPLACE "(\\\\|/)" "/" RESULT_REGEXP ${RELATIVE_PATH})
        STRING(REGEX REPLACE "\\." "\\\\." RESULT_REGEXP ${RESULT_REGEXP})
        STRING(REGEX REPLACE "\\*" "([a-zA-Z0-9_]+)" RESULT_REGEXP ${RESULT_REGEXP})
        foreach(MODULE_PATH ${MODULES_PATH})
            STRING(REGEX REPLACE ${RESULT_REGEXP} "\\1" MODULE_NAME ${MODULE_PATH})
            # message(STATUS  "get ${MODULE_NAME} from ${MODULE_PATH} with reg: ${RESULT_REGEXP} ")
            list(APPEND MODULES_NAME ${MODULE_NAME})
        endforeach(MODULE_PATH)
    endif(MODULES_PATH)
    set(${RESULT_TARGET} ${MODULES_NAME} PARENT_SCOPE)
endfunction(ListDirectory)

ListDirectory(DEMOS_PATH */*.c)
# wiring 位置
link_libraries(wiringPi m lirc_client)
message(STATUS ${WIRINGPI_DIR})
foreach(DEMO_FILE ${DEMOS_PATH})
    add_executable(${DEMO_FILE} "${DEMO_FILE}/${DEMO_FILE}.c")
endforeach(DEMO_FILE ${DEMOS_PATH})
set(CMAKE_VERBOSE_MAKEFILE 1)
install(TARGETS ${DEMOS_PATH} DESTINATION .)